/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

syntax = "proto3";

package org.jbpm.flow.serialization.protobuf;

option java_outer_classname = "KogitoProcessInstanceProtobuf";

import "org/jbpm/flow/serialization/protobuf/kogito_types.proto";


message ProcessInstance {
    string process_type = 1;
    string process_id = 2;
    string process_version = 22;

    string id = 3;
    optional string parent_process_instance_id = 4;
    optional string business_key = 5;
    optional string deploymentId = 6;
    optional string description = 7;
    int32 state = 8;
    optional int64 start_date = 9;

    optional int64 node_instance_counter = 10;

    bool signal_completion = 11;

    optional string root_process_instance_id = 12;
    optional string root_process_id = 13;

    optional string error_node_id = 14;
    optional string error_message = 15;

    optional string reference_id = 16;

    optional SLAContext sla = 17;

    optional WorkflowContext context = 18;
    repeated SwimlaneContext swimlane_context = 19;

    repeated string completedNodeIds = 20;
    
    optional string cancel_timer_id = 21;

}